---
source: spade-tests/src/typeinference.rs
---
entity foo<T>() -> int<8> { 15 }
entity main() -> int<8> {
    inst foo::<bool, bool>()
}

error: Too many arguments. Expected 1, got 2
  ┌─ testinput:3:16
  │
3 │     inst foo::<bool, bool>()
  │                ^^^^^^^^^^
  │                │     │
  │                │     Unexpected argument
  │                Expected 1 argument
